<resources>
    <string name="app_name">Proyecto_Final_DCS</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="enviar">Enviar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contrase_a_actual">Contraseña actual</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="trabajador">Trabajador</string>
    <string name="dni">DNI</string>
    <string name="nombre">Nombre</string>
    <string name="extendido">Extendido</string>
    <string name="texto">Texto</string>
    <string name="filtrar">Filtrar</string>
    <string name="a_adir_pel_cula">Añadir película</string>
    <string name="t_tulo">Título</string>
    <string name="duraci_n">Duración:</string>
    <string name="a_o">Año</string>
    <string name="director">Director</string>
    <string name="ver_alquileres">Ver alquileres</string>
    <string name="insertar_pel_cula">Insertar película</string>
    <string name="ver_cat_logo">Ver catálogo</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="ver_mis_alquileres">Ver mis alquileres</string>
    <string name="ver_disponibles">Ver disponibles</string>
    <string name="eliminar">Eliminar</string>
    <string name="eliminar_pel_cula">Eliminar película</string>
    <string name="extender">Extender</string>
    <string name="alquilar">Alquilar</string>
</resources>