<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/actual"
        android:hint="@string/contrase_a_actual"
        android:inputType="textPassword"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/nueva"
        android:hint="@string/nueva_contrase_a"
        android:inputType="textPassword"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/nueva2"
        android:hint="@string/confirmar_contrase_a"
        android:inputType="textPassword"
        />

</LinearLayout>