<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actividades.MainActivity"
    android:background="@drawable/back_login"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:foregroundGravity="center_horizontal|center_vertical"

        android:layout_centerInParent="true"
        app:cardCornerRadius="35dp"

        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bienvenido"
                android:layout_centerHorizontal="true"

                android:id="@+id/texto"
                android:layout_marginTop="40dp"
                android:textSize="40sp"
                android:textStyle="italic"
                android:textColor="@color/darkorange"
                android:outlineAmbientShadowColor="@color/black"
                />
            <Button
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_below="@id/texto"
                android:layout_centerHorizontal="true"
                android:id="@+id/ingresar"
                android:text="@string/ingresar"
                android:textColor="@color/darkgray"
                android:foregroundGravity="center"
                android:drawableStart="@drawable/ic_ingresar"
                android:background="@color/orange"
                android:layout_marginTop="20dp"
                android:paddingStart="8dp"
                />
            <Button
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_below="@id/ingresar"
                android:layout_centerHorizontal="true"
                android:id="@+id/registrar"
                android:text="@string/registrarse"
                android:textColor="@color/darkgray"
                android:foregroundGravity="center"
                android:drawableStart="@drawable/ic_registrarse"
                android:background="@color/orange"
                android:paddingStart="14dp"
                android:layout_marginTop="5dp"

                />
        </RelativeLayout>


    </androidx.cardview.widget.CardView>



</RelativeLayout>